typewire/tests/compile_fail/transparent_empty.rs
use typewire::Typewire;

#[derive(Typewire)]
#[serde(transparent)]
struct Empty;

fn main() {}
